unpackaged/main/default/objects/whistic_profile__Security_Profile__c/whistic_profile__Security_Profile__c.object-meta.xml
<CustomObject>
    <description>This object houses the metadata associated to the Whistic security profiles that can be shared</description>
    <label>Security Profile</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>