unpackaged/main/default/objects/whistic_profile__Security_Profile__c/fields/whistic_profile__Security_Profile_Audit_and_Certification__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Security_Profile_Audit_and_Certification__c</fullName>
    <label>Security Profile Audit and Certification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>