unpackaged/main/default/objects/whistic_profile__Security_Profile__c/fields/whistic_profile__Security_Profile_Documents__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Security_Profile_Documents__c</fullName>
    <label>Security Profile Documents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>