unpackaged/main/default/objects/whistic_profile__Security_Profile__c/fields/whistic_profile__Whistic_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Whistic_Profile_Id__c</fullName>
    <description>Stores the Whistic generated Id for the security profile</description>
    <externalId>true</externalId>
    <label>Whistic Profile Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>