unpackaged/main/default/objects/whistic_profile__Security_Profile__c/listViews/whistic_profile__All.listView-meta.xml
<ListView>
    <fullName>whistic_profile__All</fullName>
    <columns>NAME</columns>
    <columns>whistic_profile__Description__c</columns>
    <columns>whistic_profile__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>